BoostFramework: Guard it with overlay
Change-Id: I5e22a590b0f1f0e9a678d45d06bb262021cf84bb

--- a/core/res/res/values/derp_symbols.xml
+++ b/core/res/res/values/derp_symbols.xml
@@ -119,4 +119,7 @@
 
     <java-symbol type="bool" name="config_filterDisplayModes" />
     <java-symbol type="array" name="config_displayModeMappings" />
+
+    <!-- Boost Framework -->
+    <java-symbol type="bool" name="config_supportsBoostFramework" />
 </resources>
