--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -234,4 +234,6 @@
        (without "Focus" state) instead of Dual-stage. -->
   <bool name="config_singleStageCameraKey">false</bool>
 
+  <!-- Boost Framework -->
+  <bool name="config_supportsBoostFramework">false</bool>
 </resources>
